finish tests for resgistration